popup box size update

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,9 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 20px;
+      height:auto;
+      width: 100px;
+      margin: 180px;
     }
 
     input {
